# lite3_service

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  L3KV.sln  LICENSE  README.md  Scaling Algorithm.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  architectural_review.txt  benchmark_large.py  build_l3svc_output.txt  build_log.txt  build_log_2.txt  build_log_store.txt  build_output.txt  build_output_10.txt  build_output_2.txt  build_output_3.txt  build_output_4.txt  build_output_5.txt  build_output_6.txt  build_output_7.txt  build_output_8.txt  build_output_9.txt  cmake_install.cmake  config.json  config1.json  config_node1.json  config_node2.json  config_node3.json  crash_durability_test.py  data_corrupt.wal  debug_stall.py  generate_traffic.py  l3svc.vcxproj  (+36 more)
configs/: config2.json
docs/: ARCHITECTURE.md  Benchmarking Guide.md  Future Optimization Strategy.md  geo_replication_plan.txt
scripts/: benchmark_service.py  benchmark_throughput.py  install_files.ps1  test_client.py  test_crash_recovery.py  test_shutdown.py  verify_scaling.py
src/: main.cpp
src/engine/: clock.cpp  clock.hpp  merkle.hpp  mesh.cpp  mesh.hpp  replication_log.hpp  store.hpp  sync_manager.hpp  wal.hpp  wal_storage.hpp
src/http/: dashboard.hpp  http_server.cpp  http_server.hpp  kalman_filter.hpp
src/observability/: simple_metrics.cpp  simple_metrics.hpp
src/tests_cpp/: bench_twitter.cpp  bench_ycsb.cpp  test_clock.cpp  test_clock_simple.cpp  test_merkle.cpp  test_mesh_stress.cpp  test_phase2.cpp  test_store.cpp  test_sync_latency.cpp  test_sync_simulation.cpp  test_wal.cpp
x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
